# roda-state

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
benches/: comprehensive_bench.rs  sensor_bench.rs  store_bench.rs
crates/roda-core/: Cargo.toml
crates/roda-core/src/: lib.rs
crates/roda-core/tests/: roda_engine_tests.rs
crates/roda_core/: Cargo.toml
examples/: databento_replay.rs  hello_world.rs  sensor_test.rs
examples/databento_replay/: README.md  aggregation_stage.rs  analysis_stage.rs  book_level_entry.rs  book_level_top.rs  imbalance_signal.rs  importer.rs  latency_tracker.rs  light_mbo_delta.rs  light_mbo_entry.rs  main.rs  order_tracker.rs
examples/sensor_test/: README.md  main.rs  models.rs
examples/service_health/: README.md  main.rs  models.rs
scripts/: check.sh
src/: aggregator.rs  components.rs  direct_index.rs  engine.rs  index.rs  journal_store.rs  lib.rs  macros.rs  new_engine.rs  op_counter.rs  slot_store.rs  stage.rs  stage_engine.rs  store.rs  window.rs
src/measure/: e2e_latency_measurer.rs  latency_measurer.rs  mod.rs
src/pipe/: dedup_by.rs  delta.rs  filter.rs  inspect.rs  latency.rs  map.rs  mod.rs  progress.rs  stateful.rs  track.rs  windowed.rs
src/storage/: journal_mmap.rs  mmap_journal.rs  mod.rs  slot_mmap.rs
tests/: aggregator_tests.rs  comprehensive_tests.rs  index_tests.rs  journal_tests.rs  logic_tests.rs  push_read_tests.rs  simple_iteration_tests.rs  stage_engine_tests.rs  store_circular_tests.rs  store_no_alloc_tests.rs  window_tests.rs
