[package]
name = "roda-state"
version = "0.1.0"
edition = "2024"
description = "A wait-free, cache-friendly state synchronization engine for HFT."
authors = ["Your Name"]

[dependencies]
bytemuck = {version = "1.25.0", features = ["derive"]}
memmap2 = "0.9.9"
crossbeam-skiplist = "0.1"
clap = { version = "4.5.57", features = ["derive"] }

[dev-dependencies]
assert_no_alloc = { version = "1.1.2" }
criterion = { version = "0.5", features = ["html_reports"] }
dbn = { version = "0.48.0" }
zstd = "0.13"
clap = { version = "4.0", features = ["derive"] }

[lib]
bench = false # We use the 'benches/' directory

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "comprehensive_bench"
harness = false

[profile.profiling]
inherits = "release"
debug = true
