[package]
name = "roda-state"
version = "0.1.0"
edition = "2024"
description = "A zero-copy, lock-free multi-threaded stage engine for ultra-low latency pipelines."
authors = ["Taleh Ibrahimli"]
repository = "https://github.com/tislib/roda-state"
license = "Apache-2.0"
keywords = ["lock-free", "hft", "concurrency", "pipeline", "low-latency"]
categories = ["concurrency", "data-structures"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
memmap2 = "0.9.9"
clap = { version = "4.5.57", features = ["derive"] }
hdrhistogram = "7.5"
spdlog-rs = "0.5.2"
core_affinity = "0.8.1"
fxhash = "0.2.1"

[dev-dependencies]
assert_no_alloc = { version = "1.1.2" }
criterion = { version = "0.8.2", features = ["html_reports"] }
dbn = { version = "0.48.0" }
clap = { version = "4.0", features = ["derive"] }

[lib]
bench = false # We use the 'benches/' directory

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "sensor_bench"
harness = false

[profile.profiling]
inherits = "release"
debug = true
